# tron-service

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: workflow.yml
nginx/: nginx.conf
src/: alembic.ini  config.py  db.py  exceptions.py  main.py
src/accounts/: models.py  repositories.py  router.py  schemas.py  service.py  services.py
src/alembic/: env.py
src/alembic/versions/: 7893cc7ef01b_initial.py  87b5263cfe60_initial.py
src/utils/: migrations.py  schemas.py
tests/: __init__.py  conftest.py
tests/integration/: test_accounts.py
tests/load/: locustfile.py
tests/unit/: test_accounts_repositories.py
